<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search_item"
        android:actionLayout="@layout/search_layout"
        android:icon="@drawable/ic_action_search_lite"
        android:orderInCategory="100"
        android:showAsAction="always|collapseActionView"
        android:title="@string/search_events">
    </item>
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_action_add_lite"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:title="@string/menulbl_add"/>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh_lite"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/menulbl_refresh"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_settings_lite"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/menulbl_settings"/>
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_action_help_lite"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:title="@string/menulbl_help"/>

</menu>