<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_action_add_photo_lite"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menulbl_edit"/>
    
    <item
        android:id="@+id/menu_unpublish"
        android:icon="@drawable/ic_action_location"
        android:textColor="@color/light_gray"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:title="@string/menulbl_unpublish"/>
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_action_proceed_lite"
        android:textColor="@color/light_gray"
        android:orderInCategory="300"
        android:showAsAction="always"
        android:title="@string/menulbl_share"/>

</menu>